integration tests run in separate JVMs and in parallel