@@ -1,16 +1,14 @@
-import java.io._
-
+import SonatypeSupport._
 import com.typesafe.sbt.SbtScalariform._
-import sbt.Keys._
-import sbt.{IntegrationTest => It, _}
-import scoverage.ScoverageKeys
-
-import sbtassembly.{ AssemblyKeys, MergeStrategy, PathList }
-import AssemblyKeys._
-
-import scala.util.{Properties, Try}
-
+import java.io._
+import java.lang.Runtime
 import org.ensime.Imports.EnsimeKeys
+import sbt.{ IntegrationTest => It, _ }
+import sbt.Keys._
+import sbtassembly.{ AssemblyKeys, MergeStrategy, PathList }
+import sbtassembly.AssemblyKeys._
+import scala.util.{ Properties, Try }
+import scoverage.ScoverageKeys
 
 object EnsimeBuild extends Build with JdkResolver {
   /*
@@ -21,7 +19,7 @@ object EnsimeBuild extends Build with JdkResolver {
 
   ////////////////////////////////////////////////
   // common
-  lazy val basicSettings = Seq(
+  override lazy val settings = super.settings ++ Seq(
     organization := "org.ensime",
     scalaVersion := "2.11.7",
     version := "0.9.10-SNAPSHOT",
@@ -45,17 +43,11 @@ object EnsimeBuild extends Build with JdkResolver {
       if (scalaVersion.value.startsWith("2.10."))
         Seq(compilerPlugin("org.scalamacros" % "paradise" % "2.0.1" cross CrossVersion.full))
       else Nil
-    }
-  )
-  val isEmacs = sys.env.get("TERM") == Some("dumb")
+    },
 
-  // WORKAROUND https://github.com/daniel-trinh/sbt-scalariform/issues/4
-  def scalariformSettingsWithIt: Seq[Setting[_]] =
-    defaultScalariformSettings ++ inConfig(It)(configScalariformSettings) ++ List(
-      compileInputs in (Compile, compile) <<= (compileInputs in (Compile, compile)) dependsOn (ScalariformKeys.format in Compile),
-      compileInputs in (Test, compile) <<= (compileInputs in (Test, compile)) dependsOn (ScalariformKeys.format in Test),
-      compileInputs in (It, compile) <<= (compileInputs in (It, compile)) dependsOn (ScalariformKeys.format in It)
-    )
+    // 4 x 1GB = 4GB
+    concurrentRestrictions in Global := Seq(Tags.limitAll(4))
+  )
 
   // e.g. YOURKIT_AGENT=/opt/yourkit/bin/linux-x86-64/libyjpagent.so
   val yourkitAgent = Properties.envOrNone("YOURKIT_AGENT").map { name =>
@@ -64,7 +56,7 @@ object EnsimeBuild extends Build with JdkResolver {
     Seq(s"-agentpath:${agent.getCanonicalPath}")
   }.getOrElse(Nil)
 
-  lazy val commonSettings = scalariformSettings ++ basicSettings ++ Seq(
+  lazy val commonSettings = scalariformSettings ++ Seq(
     //resolvers += Resolver.sonatypeRepo("snapshots"),
     // sbt sometimes has jcenter https://github.com/sbt/sbt/issues/2253
     // but we only want to hit maven central and the official NetBeans repos
@@ -89,13 +81,13 @@ object EnsimeBuild extends Build with JdkResolver {
       //"-Ywarn-value-discard", // will require a lot of work
       "-Xfuture"
     ) ++ {
-      if (scalaVersion.value.startsWith("2.11")) Seq("-Ywarn-unused-import")
-      else Nil
-    } ++ {
-      // fatal warnings can get in the way during the DEV cycle
-      if (sys.env.contains("CI")) Seq("-Xfatal-warnings")
-      else Nil
-    },
+        if (scalaVersion.value.startsWith("2.11")) Seq("-Ywarn-unused-import")
+        else Nil
+      } ++ {
+        // fatal warnings can get in the way during the DEV cycle
+        if (sys.env.contains("CI")) Seq("-Xfatal-warnings")
+        else Nil
+      },
     javacOptions in (Compile, compile) ++= Seq(
       "-source", "1.6", "-target", "1.6", "-Xlint:all", "-Werror",
       "-Xlint:-options", "-Xlint:-path", "-Xlint:-processing"
@@ -103,52 +95,53 @@ object EnsimeBuild extends Build with JdkResolver {
     javacOptions in doc ++= Seq("-source", "1.6"),
     maxErrors := 1,
     fork := true,
-    parallelExecution in Test := true,
     testForkedParallel in Test := true,
-    javaOptions := Seq("-Xss2m", "-XX:MaxPermSize=256m", "-Xmx2g"),
+    javaOptions := Seq("-Xss2m", "-XX:MaxPermSize=256m", "-Xms1g", "-Xmx1g"),
+    // disabling shared memory gives a small performance boost to tests
+    javaOptions ++= Seq("-XX:+PerfDisableSharedMem"),
+    javaOptions ++= Seq("-XX:+UseConcMarkSweepGC", "-XX:+CMSIncrementalMode"),
     javaOptions in run ++= yourkitAgent,
     javaOptions in Test += "-Dlogback.configurationFile=../logback-test.xml",
     testOptions in Test ++= noColorIfEmacs,
-    // tools.jar sources are not distributed with the JDK. Get sources
-    // from http://download.java.net/openjdk/jdk6/ extract and zip up
-    // the langtools/src/classes directory, and set the environment
-    // variable referenced here
-    EnsimeKeys.unmanagedSourceArchives := sys.env.get("JDK_LANGTOOLS_SRC").map(file).filter(_.exists()).toSeq,
-    EnsimeKeys.scalariform := ScalariformKeys.preferences.value,
-    // updateCaching is still missing things --- e.g. shapeless in core/it:test
-    //updateOptions := updateOptions.value.withCachedResolution(true),
-    licenses := Seq("GPL 3.0" -> url("http://opensource.org/licenses/GPL-3.0")),
-    homepage := Some(url("http://github.com/ensime/ensime-server")),
-    publishTo <<= version { v: String =>
-      val nexus = "https://oss.sonatype.org/"
-      if (v.contains("SNAP")) Some("snapshots" at nexus + "content/repositories/snapshots")
-      else Some("releases" at nexus + "service/local/staging/deploy/maven2")
-    },
-    credentials += Credentials(
-      "Sonatype Nexus Repository Manager", "oss.sonatype.org",
-      sys.env.getOrElse("SONATYPE_USERNAME", ""),
-      sys.env.getOrElse("SONATYPE_PASSWORD", "")
-    )
-  )
+    EnsimeKeys.scalariform := ScalariformKeys.preferences.value
+  // updateCaching is still missing things --- e.g. shapeless in core/it:test
+  //updateOptions := updateOptions.value.withCachedResolution(true)
+  ) ++ sonatype("ensime", "ensime-server", GPL3)
 
   lazy val commonItSettings = scalariformSettingsWithIt ++ Seq(
-    // careful: parallel forks are causing weird failures
-    // https://github.com/sbt/sbt/issues/1890
-    parallelExecution in It := false,
-    // https://github.com/sbt/sbt/issues/1891
-    // this is supposed to set the number of forked JVMs, but it doesn't
-    // concurrentRestrictions in Global := Seq(
-    //   Tags.limit(Tags.ForkedTestGroup, 4)
-    // ),
+    // AppVeyor struggles with parallel integration tests
+    parallelExecution in It := !sys.env.contains("APPVEYOR"),
+
+    // Test forking is about running each group in a separate JVM.
+    // We want each IntegrationTest to be its own group, hence one JVM per Test.
+    // boilerplate-tastic.
     fork in It := true,
     testForkedParallel in It := true,
+    testGrouping in It <<= (
+      definedTests in It,
+      baseDirectory in It,
+      javaOptions in It,
+      outputStrategy in It,
+      envVars in It,
+      javaHome in It,
+      connectInput in It
+    ).map { (tests, base, options, strategy, env, javaHomeDir, connectIn) =>
+        val opts = ForkOptions(
+          bootJars = Nil,
+          javaHome = javaHomeDir,
+          connectInput = connectIn,
+          outputStrategy = strategy,
+          runJVMOptions = options,
+          workingDirectory = Some(base),
+          envVars = env
+        )
+        tests.map { test =>
+          Tests.Group(test.name, Seq(test), Tests.SubProcess(opts))
+        }
+      },
+
     javaOptions in It += "-Dfile.encoding=UTF8", // for file cloning
     testOptions in It ++= noColorIfEmacs,
-
-    // FIXME: do we still need these?
-    internalDependencyClasspath in Compile += { Attributed.blank(JavaTools) },
-    internalDependencyClasspath in Test += { Attributed.blank(JavaTools) },
-    internalDependencyClasspath in It += { Attributed.blank(JavaTools) },
 
     javaOptions in It ++= Seq(
       "-Dlogback.configurationFile=../logback-it.xml"
@@ -165,11 +158,12 @@ object EnsimeBuild extends Build with JdkResolver {
   )
   val akkaVersion = "2.3.14"
   val streamsVersion = "1.0"
+  val scalatestVersion = "2.2.5"
 
   ////////////////////////////////////////////////
   // utils
   def testLibs(scalaV: String, config: String = "test") = Seq(
-    "org.scalatest" %% "scalatest" % "2.2.5" % config,
+    "org.scalatest" %% "scalatest" % scalatestVersion % config,
     "org.scalamock" %% "scalamock-scalatest-support" % "3.2.2" % config,
     "org.scalacheck" %% "scalacheck" % "1.12.5" % config,
     "com.typesafe.akka" %% "akka-testkit" % akkaVersion % config,
@@ -185,7 +179,11 @@ object EnsimeBuild extends Build with JdkResolver {
   }.mkString(",")
 
   // WORKAROUND: https://github.com/scalatest/scalatest/issues/511
-  def noColorIfEmacs = if (isEmacs) Seq(Tests.Argument("-oWF")) else Seq(Tests.Argument("-oF"))
+  def noColorIfEmacs =
+    if (sys.env.get("INSIDE_EMACS").isDefined)
+      Seq(Tests.Argument(TestFrameworks.ScalaTest, "-oWF"))
+    else
+      Seq(Tests.Argument(TestFrameworks.ScalaTest, "-oF"))
   ////////////////////////////////////////////////
 
   ////////////////////////////////////////////////
@@ -194,24 +192,24 @@ object EnsimeBuild extends Build with JdkResolver {
     libraryDependencies ++= List(
       "com.google.guava" % "guava" % "18.0",
       "com.google.code.findbugs" % "jsr305" % "3.0.1" % "provided"
-    ) ++ testLibs(scalaVersion.value)
+    ) ++ testLibs(scalaVersion.value) ++ logback
   )
 
   lazy val sexpress = Project("sexpress", file("sexpress"), settings = commonSettings) dependsOn (
     util
   ) settings (
-    licenses := Seq("LGPL 3.0" -> url("http://www.gnu.org/licenses/LGPL-3.0")),
-    libraryDependencies ++= Seq(
-      "org.parboiled" %% "parboiled-scala" % "1.1.7",
-      shapeless
-    ) ++ testLibs(scalaVersion.value)
-  )
+      licenses := Seq(LGPL3),
+      libraryDependencies ++= Seq(
+        "org.parboiled" %% "parboiled-scala" % "1.1.7",
+        shapeless
+      ) ++ testLibs(scalaVersion.value)
+    )
 
   lazy val api = Project("api", file("api"), settings = commonSettings) settings (
     libraryDependencies ++= Seq(
-      "org.scalariform" %% "scalariform" % "0.1.7" intransitive()
+      "org.scalariform" %% "scalariform" % "0.1.7" intransitive ()
     ) ++ testLibs(scalaVersion.value),
-    licenses := Seq("Apache 2.0" -> url("http://opensource.org/licenses/Apache-2.0"))
+      licenses := Seq(Apache2)
   )
 
   // the JSON protocol
@@ -220,11 +218,11 @@ object EnsimeBuild extends Build with JdkResolver {
     api,
     api % "test->test" // for the test data
   ) settings (
-    libraryDependencies ++= Seq(
-      "com.github.fommil" %% "spray-json-shapeless" % "1.1.0",
-      "com.typesafe.akka" %% "akka-slf4j" % akkaVersion
-    ) ++ testLibs(scalaVersion.value)
-  )
+      libraryDependencies ++= Seq(
+        "com.github.fommil" %% "spray-json-shapeless" % "1.1.0",
+        "com.typesafe.akka" %% "akka-slf4j" % akkaVersion
+      ) ++ testLibs(scalaVersion.value)
+    )
 
   // the S-Exp protocol
   lazy val swank = Project("swank", file("swank"), settings = commonSettings) dependsOn (
@@ -232,45 +230,45 @@ object EnsimeBuild extends Build with JdkResolver {
     api % "test->test", // for the test data
     sexpress
   ) settings (
-    libraryDependencies ++= Seq(
-      "com.typesafe.akka" %% "akka-slf4j" % akkaVersion
-    ) ++ testLibs(scalaVersion.value)
-  )
+      libraryDependencies ++= Seq(
+        "com.typesafe.akka" %% "akka-slf4j" % akkaVersion
+      ) ++ testLibs(scalaVersion.value)
+    )
 
-  lazy val testingEmpty = Project("testingEmpty", file("testing/empty"), settings = basicSettings).settings(
+  lazy val testingEmpty = Project("testingEmpty", file("testing/empty")).settings(
     ScoverageKeys.coverageExcludedPackages := ".*"
   )
 
-  lazy val testingSimple = Project("testingSimple", file("testing/simple"), settings = basicSettings) settings (
+  lazy val testingSimple = Project("testingSimple", file("testing/simple")) settings (
     ScoverageKeys.coverageExcludedPackages := ".*",
-    libraryDependencies += "org.scalatest" %% "scalatest" % "2.2.5" % "test" intransitive()
+    libraryDependencies += "org.scalatest" %% "scalatest" % scalatestVersion % "test" intransitive ()
   )
 
-  lazy val testingImplicits = Project("testingImplicits", file("testing/implicits"), settings = basicSettings) settings (
+  lazy val testingImplicits = Project("testingImplicits", file("testing/implicits")) settings (
     ScoverageKeys.coverageExcludedPackages := ".*",
-    libraryDependencies += "org.scalatest" %% "scalatest" % "2.2.5" % "test" intransitive()
+    libraryDependencies += "org.scalatest" %% "scalatest" % scalatestVersion % "test" intransitive ()
   )
 
-  lazy val testingTiming = Project("testingTiming", file("testing/timing"), settings = basicSettings).settings(
+  lazy val testingTiming = Project("testingTiming", file("testing/timing")).settings(
     ScoverageKeys.coverageExcludedPackages := ".*"
   )
 
-  lazy val testingDebug = Project("testingDebug", file("testing/debug"), settings = basicSettings).settings(
+  lazy val testingDebug = Project("testingDebug", file("testing/debug")).settings(
     ScoverageKeys.coverageExcludedPackages := ".*"
   )
 
-  lazy val testingDocs = Project("testingDocs", file("testing/docs"), settings = basicSettings).settings(
+  lazy val testingDocs = Project("testingDocs", file("testing/docs")).settings(
     ScoverageKeys.coverageExcludedPackages := ".*",
     libraryDependencies ++= Seq(
       // specifically using ForecastIOLib version 1.5.1 for javadoc 1.8 output
-      "com.github.dvdme" %  "ForecastIOLib" % "1.5.1" intransitive(),
-      "com.google.guava" % "guava" % "18.0" intransitive(),
-      "commons-io" % "commons-io" % "2.4" intransitive()
+      "com.github.dvdme" % "ForecastIOLib" % "1.5.1" intransitive (),
+      "com.google.guava" % "guava" % "18.0" intransitive (),
+      "commons-io" % "commons-io" % "2.4" intransitive ()
     )
   )
 
   // java project with no scala-library
-  lazy val testingJava = Project("testingJava", file("testing/java"), settings = basicSettings).settings(
+  lazy val testingJava = Project("testingJava", file("testing/java")).settings(
     crossPaths := false,
     autoScalaLibrary := false,
     ScoverageKeys.coverageExcludedPackages := ".*"
@@ -286,36 +284,42 @@ object EnsimeBuild extends Build with JdkResolver {
     testingTiming % "test,it",
     testingDebug % "test,it",
     testingJava % "test,it"
-  ).configs(It).settings (
-    commonSettings
-  ).settings (
-    inConfig(It)(Defaults.testSettings)
-  ).settings (
-    commonItSettings
-  ).settings(
-    libraryDependencies ++= Seq(
-      "com.h2database" % "h2" % "1.4.189",
-      // Netbeans 7.4+ needs Java 7 (7.3 only needs it at runtime)
-      "org.netbeans.api" % "org-netbeans-api-java" % "RELEASE731",
-      "org.netbeans.api" % "org-netbeans-modules-java-source" % "RELEASE731",
-      "com.typesafe.slick" %% "slick" % "3.1.0",
-      "com.jolbox" % "bonecp" % "0.8.0.RELEASE", // TODO: upgrade to https://github.com/brettwooldridge/HikariCP
-      "org.apache.commons" % "commons-vfs2" % "2.0" intransitive(),
-      // lucene 4.8+ needs Java 7: http://www.gossamer-threads.com/lists/lucene/general/225300
-      "org.apache.lucene" % "lucene-core" % "4.7.2",
-      "org.apache.lucene" % "lucene-analyzers-common" % "4.7.2",
-      "org.ow2.asm" % "asm-commons" % "5.0.4",
-      "org.ow2.asm" % "asm-util" % "5.0.4",
-      "org.scala-lang" % "scala-compiler" % scalaVersion.value,
-      "org.scala-lang" % "scalap" % scalaVersion.value,
-      "com.typesafe.akka" %% "akka-actor" % akkaVersion,
-      "com.typesafe.akka" %% "akka-slf4j" % akkaVersion,
-      "org.scala-refactoring" %% "org.scala-refactoring.library" % "0.8.0",
-      "commons-lang" % "commons-lang" % "2.6",
-      "commons-io" % "commons-io" % "2.4" % "test,it",
-      "com.googlecode.java-diff-utils" % "diffutils" % "1.3.0"
-    ) ++ logback ++ testLibs(scalaVersion.value, "it,test")
-  )
+  ).configs(It).settings(
+      commonSettings
+    ).settings(
+      inConfig(It)(Defaults.testSettings)
+    ).settings(
+        commonItSettings
+      ).settings(
+        unmanagedJars in Compile += JavaTools,
+        // tools.jar sources are not distributed with the JDK. Get sources
+        // from http://download.java.net/openjdk/jdk6/ extract and zip up
+        // the langtools/src/classes directory, and set the environment
+        // variable referenced here
+        EnsimeKeys.unmanagedSourceArchives := sys.env.get("JDK_LANGTOOLS_SRC").map(file).filter(_.exists()).toSeq,
+        libraryDependencies ++= Seq(
+          "com.h2database" % "h2" % "1.4.190",
+          "com.typesafe.slick" %% "slick" % "3.1.1",
+          "com.jolbox" % "bonecp" % "0.8.0.RELEASE", // consider https://github.com/brettwooldridge/HikariCP
+          // Netbeans 7.4+ needs Java 7 (7.3 only needs it at runtime)
+          "org.netbeans.api" % "org-netbeans-api-java" % "RELEASE731",
+          "org.netbeans.api" % "org-netbeans-modules-java-source" % "RELEASE731",
+          "org.apache.commons" % "commons-vfs2" % "2.0" intransitive (),
+          // lucene 4.8+ needs Java 7: http://www.gossamer-threads.com/lists/lucene/general/225300
+          "org.apache.lucene" % "lucene-core" % "4.7.2",
+          "org.apache.lucene" % "lucene-analyzers-common" % "4.7.2",
+          "org.ow2.asm" % "asm-commons" % "5.0.4",
+          "org.ow2.asm" % "asm-util" % "5.0.4",
+          "org.scala-lang" % "scala-compiler" % scalaVersion.value,
+          "org.scala-lang" % "scalap" % scalaVersion.value,
+          "com.typesafe.akka" %% "akka-actor" % akkaVersion,
+          "com.typesafe.akka" %% "akka-slf4j" % akkaVersion,
+          "org.scala-refactoring" %% "org.scala-refactoring.library" % "0.8.0",
+          "commons-lang" % "commons-lang" % "2.6",
+          "commons-io" % "commons-io" % "2.4" % "test,it",
+          "com.googlecode.java-diff-utils" % "diffutils" % "1.3.0"
+        ) ++ logback ++ testLibs(scalaVersion.value, "it,test")
+      )
 
   lazy val server = Project("server", file("server")).dependsOn(
     core, swank, jerk,
@@ -326,41 +330,40 @@ object EnsimeBuild extends Build with JdkResolver {
     core % "test->test",
     core % "it->it",
     testingDocs % "test,it"
-  ).configs(It).settings (
-    commonSettings
-  ).settings (
-    inConfig(It)(Defaults.testSettings)
-  ).settings (
-    commonItSettings
-  ).settings (
-    unmanagedJars in Compile += JavaTools,
-    libraryDependencies ++= Seq(
-      "com.typesafe.akka" %% "akka-stream-experimental" % streamsVersion,
-      "com.typesafe.akka" %% "akka-http-core-experimental" % streamsVersion,
-      "com.typesafe.akka" %% "akka-http-experimental" % streamsVersion,
-      "com.typesafe.akka" %% "akka-http-spray-json-experimental" % streamsVersion,
-      "com.typesafe.akka" %% "akka-http-xml-experimental" % streamsVersion,
-      "com.typesafe.akka" %% "akka-http-testkit-experimental" % streamsVersion % "test,it"
-    ) ++ testLibs(scalaVersion.value, "it,test")
-  )
+  ).configs(It).settings(
+      commonSettings
+    ).settings(
+      inConfig(It)(Defaults.testSettings)
+    ).settings(
+        commonItSettings
+      ).settings(
+        libraryDependencies ++= Seq(
+          "com.typesafe.akka" %% "akka-stream-experimental" % streamsVersion,
+          "com.typesafe.akka" %% "akka-http-core-experimental" % streamsVersion,
+          "com.typesafe.akka" %% "akka-http-experimental" % streamsVersion,
+          "com.typesafe.akka" %% "akka-http-spray-json-experimental" % streamsVersion,
+          "com.typesafe.akka" %% "akka-http-xml-experimental" % streamsVersion,
+          "com.typesafe.akka" %% "akka-http-testkit-experimental" % streamsVersion % "test,it"
+        ) ++ testLibs(scalaVersion.value, "it,test")
+      )
 
   // manual root project so we can exclude the testing projects from publication
   lazy val root = Project(id = "ensime", base = file("."), settings = commonSettings) aggregate (
     api, util, sexpress, jerk, swank, core, server
   ) dependsOn (server) settings (
-    // e.g. `sbt ++2.11.7 ensime/assembly`
-    test in assembly := {},
-    aggregate in assembly := false,
-    assemblyMergeStrategy in assembly := {
-      case PathList("META-INF", "namedservices", xs @ _*) => MergeStrategy.filterDistinctLines
-      case "META-INF/netbeans/translate.names"            => MergeStrategy.filterDistinctLines
-      case "META-INF/namedservices.index"                 => MergeStrategy.filterDistinctLines
-      case "META-INF/generated-layer.xml"                 => MergeStrategy.rename
-      case other                                          => MergeStrategy.defaultMergeStrategy(other)
-    },
-    assemblyExcludedJars in assembly := List(Attributed.blank(JavaTools)),
-    assemblyJarName in assembly := s"ensime_${scalaVersion.value}-${version.value}-assembly.jar"
-  )
+      // e.g. `sbt ++2.11.7 ensime/assembly`
+      test in assembly := {},
+      aggregate in assembly := false,
+      assemblyMergeStrategy in assembly := {
+        case PathList("META-INF", "namedservices", xs @ _*) => MergeStrategy.filterDistinctLines
+        case "META-INF/netbeans/translate.names" => MergeStrategy.filterDistinctLines
+        case "META-INF/namedservices.index" => MergeStrategy.filterDistinctLines
+        case "META-INF/generated-layer.xml" => MergeStrategy.rename
+        case other => MergeStrategy.defaultMergeStrategy(other)
+      },
+      assemblyExcludedJars in assembly := List(Attributed.blank(JavaTools)),
+      assemblyJarName in assembly := s"ensime_${scalaVersion.value}-${version.value}-assembly.jar"
+    )
 }
 
 trait JdkResolver {
@@ -375,11 +378,11 @@ trait JdkResolver {
     sys.props.get("java.home").map(new File(_).getParent),
     sys.props.get("java.home")
   ).flatten.map { n =>
-    new File(n.trim + "/lib/tools.jar")
-  }.filter(_.exists()).headOption.getOrElse(
-    throw new FileNotFoundException(
-      """Could not automatically find the JDK/lib/tools.jar.
+      new File(n.trim + "/lib/tools.jar")
+    }.filter(_.exists()).headOption.getOrElse(
+      throw new FileNotFoundException(
+        """Could not automatically find the JDK/lib/tools.jar.
         |You must explicitly set JDK_HOME or JAVA_HOME.""".stripMargin
+      )
     )
-  )
 }
